fix: Do not overlap End Day button with QuickSelect (#303)
* fix: do not overlap end day button with QuickSelect
* feat: center QuickSelect over field for phones in landscape

--- a/src/components/QuickSelect/QuickSelect.sass
+++ b/src/components/QuickSelect/QuickSelect.sass
@@ -24,6 +24,8 @@
   @media (orientation: landscape) and (max-height: #{$break-large-phone})
     bottom: auto
     top: 5em
+    max-width: calc(100% - 12em)
+    left: calc(50% - (#{$field-space-for-right-side-controls} / 2))
 
     .menu-open &
       display: none
