--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -41,3 +41,5 @@ $cow-color-orange: #ff7031
 $cow-color-purple: #d884f2
 $cow-color-white: #ffffff
 $cow-color-yellow: #fff931
+
+$field-space-for-right-side-controls: 4.5em
